--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactstrap": "^9.2.2"
+    "reactstrap": "^9.2.2",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -25,7 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "react-router-dom": "^6.22.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.1.4"
   }
 }
